test/1.4/errors/T_ESYNTAX_old_assign.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method init() {
    // In DML 1.4, = is a statement, not an expression
    /// ERROR ESYNTAX
    if (a = b) ;
}
